--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
 		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss-motion": "^1.0.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.4.11",
