--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
 		"@sveltejs/enhanced-img": "^0.4.4",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"formsnap": "^2.0.0",
+		"mode-watcher": "^0.5.0",
+		"sveltekit-superforms": "^2.22.1",
+		"zod": "^3.24.1"
 	}
 }
