--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@tailwindcss/typography": "^0.5.15",
 		"formsnap": "^2.0.0",
 		"mode-watcher": "^0.5.0",
+		"svelte-french-toast": "^1.2.0",
 		"sveltekit-superforms": "^2.22.1",
 		"zod": "^3.24.1"
 	}
